# rules_toml

./: .bazelignore  .bazelrc  .gitattributes  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  README.md  WORKSPACE.bazel  bench_scalar_profile.bzl  toml.bzl
.bcr/: metadata.template.json
.github/workflows/: BUILD.bazel  buildifier.yaml  ci.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD.bazel  MODULE.bazel  MODULE.bzl  rules.md  toml.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  check_toml.bzl
toml/: BUILD.bazel  defs.bzl  repositories.bzl  test.py  toml.bzl
toml/private/: BUILD.bazel  datetime.bzl  decode.bzl  encode.bzl
toml/tests/: BUILD.bazel  decode_tests.bzl  test_complex_string.bzl  test_compliance_decoder.bzl  test_compliance_encoder.bzl  test_datetime.bzl  test_depth.bzl  test_encoder_style.bzl  test_float.bzl  test_suite_repo.bzl
toml/tests/benchmarks/: BUILD.bazel  Cargo.lock.toml  bench_scalar.bzl  benchmark_test.bzl  benchmarks.bzl  cargo_lock_data.bzl  cargo_lock_prof.bzl  test_locals.bzl  test_range.bzl  test_struct_dict.bzl
tools/: BUILD.bazel
