"Bazel dependencies"

module(
    name = "rules_toml",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.5.0", dev_dependency = True)

test_suite = use_repo_rule("//toml/tests:test_suite_repo.bzl", "test_suite")

test_suite(
    name = "toml_test_suite",
    integrity = "sha256-NxcWN3dJQBYkOkcmFQC7vtalnIniMvn5abPdhJwS22M=",
    url = "https://github.com/toml-lang/toml-test/archive/refs/tags/v1.4.0.tar.gz",
)
