"Bazel dependencies"

module(
    name = "toml.bzl",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.9.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0", dev_dependency = True)

bazel_dep(name = "re.bzl", version = "0.1.0")
git_override(
    module_name = "re.bzl",
    commit = "1212d2d312dd511252998f822d559c77c6888c3a",
    remote = "https://github.com/jvolkman/re.bzl.git",
)

test_suite = use_repo_rule("//toml/tests:test_suite_repo.bzl", "test_suite")

test_suite(
    name = "toml_test_suite",
    integrity = "sha256-HqXrCuxACrraSFzbdQreUKfqWaKafbXiJs1Ebzdr9vk",
    url = "https://github.com/toml-lang/toml-test/archive/229ce2e7bb565d1704eac5f41e939870d4b1bce7.tar.gz",
)
