"""Build rules for documentation."""

load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

# buildifier: disable=native-java-binary
java_binary(
    name = "renderer",
    main_class = "com/google/devtools/build/stardoc/renderer/RendererMain",
    runtime_deps = ["@stardoc-prebuilt//jar"],
)

stardoc_with_diff_test(
    name = "toml",
    bzl_library_target = "@toml.bzl//:toml",
    renderer = ":renderer",
)

update_docs(name = "update")
