bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "toml.bzl", version = "0.1.0")
bazel_dep(name = "stardoc", version = "0.8.0", repo_name = "io_bazel_stardoc")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "toml.bzl",
    path = "..",
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "stardoc-prebuilt",
    integrity = "sha256-VQuahQMiQJDjsA+Bc44v48RYPG44qFavXvsvOcM4PyM=",
    urls = ["https://github.com/alexeagle/stardoc-prebuilt/releases/download/v0.8.0/renderer_deploy.jar"],
)

git_override(
    module_name = "re.bzl",
    commit = "84cdd7a9877b2fdf6637589b132704fd3e0ea2a0",
    remote = "https://github.com/jvolkman/re.bzl.git",
)
