load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//toml:__subpackages__"])

bzl_library(
    name = "decode",
    srcs = ["decode.bzl"],
    deps = [
        "@bazel_lib//lib:strings",
        "@re.bzl//:re",
    ],
)

bzl_library(
    name = "encode",
    srcs = ["encode.bzl"],
    deps = [
        "@bazel_lib//lib:strings",
    ],
)
