"""Benchmarks for TOML library."""

load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//toml/tests/benchmarks:benchmark_test.bzl", "benchmark_test")
load(":cargo_lock_prof.bzl", "benchmark_runner")
load(":test_locals.bzl", "locals_benchmark")
load(":test_range.bzl", "range_benchmark")
load(":test_struct_dict.bzl", "struct_dict_benchmark")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "benchmarks",
    srcs = ["benchmarks.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//toml",
    ],
)

benchmark_test(
    name = "benchmark_test",
)

benchmark_test(
    name = "cargo_lock_benchmark",
)

benchmark_runner(
    name = "benchmark_prof",
)

range_benchmark(
    name = "range_prof",
)

struct_dict_benchmark(
    name = "struct_dict_prof",
)

locals_benchmark(
    name = "locals_prof",
)
